--- a/src/components/layout/footer/Footer.scss
+++ b/src/components/layout/footer/Footer.scss
@@ -1,10 +1,11 @@
 @import '../../../assets/styles/variables';
 .footer{
     width: 100%;
-    height: 40%;
-    background-color: #fff;
-    margin-top: 5%;
     
+    bottom: 0;
+    background-color: #fff;
+    height: 40%;
+    margin-top: 10%;
     color: $general_bg;
     
 }
@@ -21,7 +22,7 @@
     filter: blur(0.5px);
     width: 90%;
     height: 0.08px;
-    background-color: #cecbcc;
+    background-color: #707070;
     position: absolute;
 
     bottom: 0;
@@ -83,9 +84,8 @@ ul{
 
 
 .minor_slice{
-    width: 100%;
-    color: #6b6b6b;
-    padding-top: 0.9%;
+    color: #707070;
+    bottom: 0;
     
 }
 #corparation{
@@ -94,8 +94,42 @@ ul{
     position: absolute;
     padding-left: 5%;
     z-index: 2;
+    -webkit-background-clip: text;
+    background-clip: text;
+    
+    color: #707070;
+    animation: textShine 7s ease-in-out infinite normal;
+  -moz-animation: textShine 7s ease-in-out infinite normal;
+  -o-animation: textShine 7s ease-in-out infinite normal;
+  -webkit-animation: textShine 7s ease-in-out infinite normal;
+
 
 }
+#footer_module a{
+    text-decoration: none;
+    list-style-type:  none;
+    z-index: 11;
+    color: $general_bg;
+    transition: ease-out 0.5s;
+  }
+#footer_module a:hover{
+    color: #656060;
+    filter: brightness(140%);
+}
+#corparation:hover{
+    cursor: pointer;
+}
+@keyframes textShine {
+    50% {
+      color: $premium-color;
+      filter: brightness(80%);
+      
+    }
+    100% {
+      color:#707070 ;
+    }
+  }
+
 #police_conf{
     display: inline-block;
     font-size: 16px;
