--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -2,26 +2,199 @@
 
 .header{
     width: 100%;
-    height: 100%;
-    
+    height: 12%;
+    background-color:$general_bg ;
+    position: relative;
+}
+.header::after{
+    content: "";
+    filter: blur(1px);
+    width: 90%;
+    height: 0.08px;
+    background-color: #B6C1C2;
+    position: absolute;
+
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.anti_header{
+  width: 90%;
+  height: 100%;
+  display: flex;
+  position: relative;
+  margin-left: 5%;
+  overflow: hidden;
+  color: #B6C1C2;
+}
+.bott_header1{
+  padding-top: 2.8%;
+  display: flex;
+  overflow: hidden;
+  color: #B6C1C2;
+}
+.general_menu1{
+  position: absolute;
+  display: flex;
+  font-weight: 370;
+  padding-bottom: 1%;
+  font-size: 1.1rem;    
+  vertical-align: top;
+  list-style-type:  none;
+  display: flex;
+  font-size: 16px;
+  text-decoration: none;
+  margin-right: 1%;
+  color: #B6C1C2;
+  
+  text-align: center;
+}
+.logo_div{
+  width: 12%;
+  position: absolute;
+  text-align: center;
+  justify-content: center;
+  padding-top: 1%;
+  margin-left: 44%;
+}
+.logo{
+  width: 100%;
+  
+
 }
 
-.full_header{
+.general_menu1 li{
+  color: #B6C1C2;
+  padding-right: 1.5rem;
+  
+}
+.our_contact{
+  position: absolute;
+  display: flex;
+  z-index: 2;
+  font-weight: 370;
+  padding-bottom: 1%;
+  font-size: 1.1rem;    
+  vertical-align: top;
+  list-style-type:  none;
+  display: flex;
+  font-size: 16px;
+  text-decoration: none;
+  right: 0;
+  text-align: center;
+  
+  top: 50%;
+  transform: translateY(-40%);
+  line-height: 1;
+  
+}
+.reverse_call{
+  margin-right: 5rem;
+  
+}
+.application{
+  display: inline-block;
+}
+.application button{
+  background-color: $premium-color;
+  color: #fff;
+  display: inline-block;
+  height: 100%;
+  width: 10rem;
+  border-radius: 30px;
+  border-width: 0px;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  background-position: center center;
+  transition: 0.8s;
+
+  //transform: translateY(10%);
+}
+.application button:hover{
+  filter: brightness(140%);
+}
+.number_rev a{
+  font-size: 25px;
+}
+.number_rev{
+  margin-bottom: 5%;
+}
+
+.reverse_call a{
+  color: #c1cacb;
+  position: relative;
+  display: inline-block;
+  -webkit-transition: -webkit-transform 0.3s;
+  -moz-transition: -moz-transform 0.3s;
+  transition: transform 0.3s;
+}
+.reverse_call div{
+  
+  overflow: hidden;
+  line-height: 1;
+}
+.general_menu1{
+  overflow: hidden;
+  line-height: 1;
+  z-index: 11;
+}
+.bott_header1 a{
+  color: #c1cacb;
+  position: relative;
+  display: inline-block;
+  -webkit-transition: -webkit-transform 0.3s;
+  -moz-transition: -moz-transform 0.3s;
+  transition: transform 0.3s;
+}
+.reverse_call a::before, .bott_header1 a::before{
+  content: " " attr(data-text);
+  position: absolute;
+  top: 100%;
+  transition:   0.7s;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  
+}
+.reverse_call a:hover, .reverse_call a:focus, .bott_header1 a:hover, .bott_header1 a:focus{
+  color: $premium-color;
+  -webkit-transform: translateY(-100%);
+  -moz-transform: translateY(-100%);
+  transform: translateY(-100%);
+  
+}
+/*.reverse_call p:hover::after{
+  color: $premium-color;
+  
+  bottom: 100%;
+
+}
+.reverse_call p:hover{
+  color: transparent;
+  transition: 0.8s;
+}*/
+a{
+  text-decoration: none;
+  list-style-type:  none;
+  z-index: 11;
+}
+/*.full_header{
     font-stretch: condensed;
     position: relative;
-    width: 100%;
-    height: 90%;
+    width: 90%;
+    height: 75%;
     background-image: url(/public/images/menu-bg.png);
     background-size: cover;
-  
-  }
-  .top_header{
+    margin-left: 5%;
+
+  }*/
+  /*.top_header{
     z-index: 1;
     text-align: center;
     z-index: 0;
     justify-content: right;
     width: 100%;
     height: 10%;
+
   
   }
   .bott_header{
@@ -43,13 +216,13 @@
     font-size: 19px;
     
     margin-right: 1%;
-    /*justify-content: right;
+    justify-content: right;
     
-    color: #fff;*/
-    justify-content: flex-end; /* Изменено на flex-end для выравнивания вправо */
-     /* Убираем маржины */
     color: #fff;
-    padding: 0; /* Убираем внутренние отступы */
+    justify-content: flex-end;  Изменено на flex-end для выравнивания вправо 
+      Убираем маржины 
+    color: #fff;
+    padding: 0;  Убираем внутренние отступы 
   }
   .top_menu{
     font-size: 16px;
@@ -67,9 +240,9 @@
     display: block; 
     width: 85%; 
     position: absolute;
-    right: 0; /* Задайте нужное положение по горизонтали */
+    right: 0;  Задайте нужное положение по горизонтали 
     bottom: -1rem;
-    height: 0.8px; /* Задайте нужную высоту */
+    height: 0.8px;  Задайте нужную высоту 
     background: #aaa9a9;
     margin-right: 1.2%;
     filter: blur(0.5px);
@@ -82,15 +255,21 @@
     padding-right: 1.5rem;
     padding-left: 1rem;
   }
+  */
   li{
-    transition: 0.4s;
-  }
-  li:hover{
-    color:$premium-color;
+    transition: 0.8s;
+    overflow: hidden;
+    position: relative;
     
   }
-  .full_header a{
+
+
+  //li:hover{
+    //color: $premium-color;
+  //}
+
+  /*.full_header a{
     color: #fff;
     text-decoration: none;
-  }
+  }*/
   
