--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -1,8 +1,16 @@
-.full_screen{
-    width: 100%;
+html, body {
     height: 100%;
+    margin: 0;
 }
-.wrapper{
-    width: 100%;
-    height: 100%;
+.full_screen {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    overflow: hidden;
+}
+
+.wrapper {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
