--- a/src/components/layout/footer/Footer.scss
+++ b/src/components/layout/footer/Footer.scss
@@ -1,12 +1,15 @@
 @import '../../../assets/styles/variables';
 .footer{
     width: 100%;
-    
+    position: relative;
     bottom: 0;
     background-color: #fff;
-    height: 40%;
-    margin-top: 10%;
+    height: 400px;
+    
     color: $general_bg;
+    margin-top: -1px;
+    margin-top: 100px;
+	clear:both;
     
 }
 .general_slice{
@@ -119,16 +122,7 @@ ul{
 #corparation:hover{
     cursor: pointer;
 }
-@keyframes textShine {
-    50% {
-      color: $premium-color;
-      filter: brightness(80%);
-      
-    }
-    100% {
-      color:#707070 ;
-    }
-  }
+
 
 #police_conf{
     display: inline-block;
@@ -145,3 +139,75 @@ ul{
     padding-left: 72%;
     position: absolute;
 }
+
+
+@media (max-width: 768px){
+    .footer_menu{
+        position: relative;
+        height: auto !important;
+    }.footer{
+        height: auto;
+        
+    }
+    .contacts h1{
+        font-weight: 430;
+        font-size: 1.5rem;
+        transition: 0.9s;
+        letter-spacing: 0;
+        color: #4c4c4c !important;
+        
+    }.general_slice{
+        display: block;
+    }
+    .footer_menu{
+        margin-left: 5%;
+        margin-top: 10%;
+        padding-bottom: 5%;
+        
+    }#footer_module{
+        padding: 0;
+        position: relative;
+    }#footer_share{
+        padding-left: 45%;
+    }#corparation{
+        font-size: 14px;
+        position: relative;
+        color: #4c4c4c;
+        font-weight: 400;
+    }#corparation:hover{
+
+    }
+    #police_conf{
+        position: relative;
+        padding: 0;
+        padding-left: 5%;
+    }#error_site{
+        position: relative;
+        padding-left: 5%;
+    }
+    .minor_slice{
+        position: relative;
+        color: #4c4c4c;
+        height: 30%;
+        padding-top: 0.5rem;
+        
+    }.corparation{
+        color: #4c4c4c;
+    }.general_slice{
+        height: 70%;
+    }
+}
+.contacts h1:hover{
+    color: inherit;
+}
+
+/*@keyframes textShine {
+    50% {
+      color: $premium-color;
+      filter: brightness(80%);
+      
+    }
+    100% {
+      color:#707070 ;
+    }
+  }*/
