--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -2,16 +2,16 @@
 
 .header{
     width: 100%;
-    height: 12%;
+    height: 100px;
     background-color:$general_bg ;
     position: relative;
 }
 .header::after{
     content: "";
-    filter: blur(1px);
-    width: 90%;
+    filter: blur(-100px);
+    width: 89%;
     height: 0.08px;
-    background-color: #B6C1C2;
+    background-color: #000000;
     position: absolute;
 
     bottom: 0;
@@ -105,12 +105,14 @@
   border-width: 0px;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
   background-position: center center;
-  transition: 0.8s;
+  transition: 0.3s ease-out;
 
   //transform: translateY(10%);
 }
 .application button:hover{
-  filter: brightness(140%);
+  background-color: #222222;
+  color: $premium-color;  
+  font-family: 800;
 }
 .number_rev a{
   font-size: 25px;
@@ -162,6 +164,19 @@
   transform: translateY(-100%);
   
 }
+
+
+
+#requestButton_double_modal{
+  transition: 0.4 ease-out;
+  
+  height: 3rem !important;
+}
+#requestButton_double_modal:hover{
+  background-color: #222222 !important;
+  color: $premium-color !important;  
+  font-family: 800 !important;
+}
 /*.reverse_call p:hover::after{
   color: $premium-color;
   
@@ -177,93 +192,208 @@ a{
   list-style-type:  none;
   z-index: 11;
 }
-/*.full_header{
-    font-stretch: condensed;
-    position: relative;
-    width: 90%;
-    height: 75%;
-    background-image: url(/public/images/menu-bg.png);
-    background-size: cover;
-    margin-left: 5%;
-
-  }*/
-  /*.top_header{
-    z-index: 1;
-    text-align: center;
-    z-index: 0;
-    justify-content: right;
-    width: 100%;
-    height: 10%;
-
+.mobileMenuButton {
+  display: none; // Скрыть кнопку на больших экранах
+  background-color: #222; // Пример стилизации кнопки
+  color: #fff;
+  border: none;
+  padding: 10px;
+  vertical-align: middle;
+  margin-top: 10px;
+  cursor: pointer;
+}
+.number_rev_m_n{
+  display: none;
+}.number_rev_m{
+  display: none;
+}
+.mobile_menu{
+  display: none;
+}
+@media (max-width: 768px) {
+  .mobile_menu {
+    display: flex;
+    flex-direction: column;
+    position: fixed; // Фиксированное положение
+    top: 0;
+    right: 0;
+    width: 90%; // Ширина меню
+    height: 100%; // Высота меню
+    background-color: #0e0e0efb; // Фон меню
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.3); // Тень для эффекта приподнятости
+    z-index: 1000; // Слои
+    transform: translateX(100%); /* скрыто */
+    opacity: 0; /* скрыто */
+    transition: transform 0.3s ease, opacity 0.3s ease; /* переходы */
+     
   
   }
-  .bott_header{
-    position: relative;
+  .mobile_menu.active {
+    display: flex;
+    transform: translateX(0); /* видно */
+    opacity: 1; /* видно */
+    
+  }.li_top{
+    margin-top: 15px !important;
+  }
+  .mobile_menu li {
+    padding: 15px; // Отступы для пунктов меню
+    display: inline-block; 
+    transition: 0 !important;
+    
+    
+  }.mobile_menu a{
     width: 100%;
-    height: 80%;
-    justify-content: space-between; 
-    padding-top: 2%;
+    transition: 0 !important;
+  }
+  .mobileMenuButton {
+      display: block; // Показывать кнопку на мобильных устройствах
 
-    
+      
+      margin-top: 0;
+      transition: transform 1.3s ease, opacity 1.3s ease;
+
   }
-  .general_menu{
-    font-weight: 370;
-    padding-bottom: 1%;
-    font-size: 1.1rem;
-    vertical-align: top;
-    list-style-type:  none;
+  .mobileMenuButton img{
+    width: 28px;
+  }
+  .bott_header1{
     display: flex;
-    font-size: 19px;
-    
-    margin-right: 1%;
-    justify-content: right;
-    
-    color: #fff;
-    justify-content: flex-end;  Изменено на flex-end для выравнивания вправо 
-      Убираем маржины 
-    color: #fff;
-    padding: 0;  Убираем внутренние отступы 
+    align-items: center;
+    padding-top: 0;
+
   }
-  .top_menu{
-    font-size: 16px;
-    position: relative;
-    padding-top: 2.5%;
-    text-align: center;
-    list-style-type:  none;
+  .number_rev_m{
+    display: block;
+  }
+  .our_contact{
+    display: none;
+  }
+
+  .general_menu1 {
+      display: none; // Скрывать обычное меню на мобильных
+  }
+  .logo_div{
     display: flex;
+    width: 30%;
     justify-content: right;
-    margin-right: 1%;
-    color:#d7d8da;;
-  }
-  .top_menu::after{
-    content: ""; 
-    display: block; 
-    width: 85%; 
+    align-items: center;
+    vertical-align: middle;
+    height: 100%;
     position: absolute;
-    right: 0;  Задайте нужное положение по горизонтали 
-    bottom: -1rem;
-    height: 0.8px;  Задайте нужную высоту 
-    background: #aaa9a9;
-    margin-right: 1.2%;
-    filter: blur(0.5px);
+    right: 0;
+  }.logo_div img{
+    left: 100%;
+   
   }
-  .top_menu li{
-    padding-right: 1.5rem;
-    padding-left: 1rem;
+}
+.reverse_call a:hover, 
+.reverse_call a:focus, 
+.bott_header1 a:hover, 
+.bott_header1 a:focus {
+  color: $premium-color;
+  -webkit-transform: translateY(-100%);
+  -moz-transform: translateY(-100%);
+  transform: translateY(-100%);
+}
+
+// Медиазапрос для отключения hover на мобильных устройствах
+@media (max-width: 768px) {
+  .reverse_call a:hover,
+  .reverse_call a:focus,
+  .bott_header1 a:hover,
+  .bott_header1 a:focus {
+    color: inherit; // Возвращаем к исходному цвету
+    transform: none; // Убираем эффект перемещения
   }
-  .general_menu li{
-    padding-right: 1.5rem;
-    padding-left: 1rem;
+  
+  .reverse_call a::before, .bott_header1 a::before{
+    content: " " ;
+    
+    
   }
-  */
-  li{
-    transition: 0.8s;
-    overflow: hidden;
-    position: relative;
+  .mobile_menu li:hover {
+    background-color: $simple-color;
+    color: #222222;
+
+  }.mobile_menu a:hover{
+    color: #222222;
+    background-color: $simple-color;
     
   }
 
+}
+@media (min-width: 768px) {
+  .reverse_call{
+    display: none;
+  }.application{
+    display: none;
+  }.logo_div{
+    display: flex;
+    width: 18%;
+    justify-content: right;
+    align-items: center;
+    vertical-align: middle;
+    height: 100%;
+    position: absolute;
+    right: 0;
+    
+  }.general_menu1{
+    margin-top: 15px;
+  }
+}
+@media (min-width:1040px){
+  .general_menu1{
+    margin-top: 0px;
+  }
+}
+@media (min-width: 1265px){
+  .reverse_call{
+    display: block;
+    margin-right:15rem ;
+  }.general_menu1{
+    margin-top: 0;
+  }
+  .application{
+    display: none;
+  } 
+}
+@media (min-width: 1370px) {
+  .logo_div{
+    display: flex;
+    width: 18%;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    margin-top: 0;
+    padding-top: 3px;
+  }.reverse_call{
+    
+    margin-right:0 ;
+  }
+}
 
+@media (min-width: 1705px){
+
+  .logo_div{
+    width: 12%;
+  }
+  .reverse_call{
+    margin-right: 1rem;
+  }
+    
+  .application{
+    display: block;
+  }
+}
+.general_menu1 li{
+  transition: 0.8s;
+  overflow: hidden;
+  position: relative;
+}
   //li:hover{
     //color: $premium-color;
   //}
